--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,22 +1,86 @@
-div {
-    height: 1000px;
-    width: 1600px;
+.logo {
+    width: 80px
 }
 
-.center {
+.icon {
+    width: 80px
+}
+
+#hero-img {
+    width: 100%
+}
+
+body {
+    background-color: white;
+}
+
+.home-title {
+    color: white
+}
+
+.msg p {
+    color: #4B4A67 
+}
+
+header {
+    background-color: #8DB580;
+}
+
+nav a:hover {
+    background-color: #ddd1c78f;
+    color: white
+}
+
+.book {
+    background-color: #ddd1c78f;
+    color: #4B4A67;
+    text-decoration: none;
+}
+
+.join {
+    background-color: #ddd1c78f;
+    color: #4B4A67;
+    text-decoration: none;
+}
+
+.book:hover {
+    background-color: #ddd1c78f;
+    color: #4B4A67 
+}
+
+.join:hover {
+    background-color: #ddd1c78f;
+    color: #4B4A67 
+}
+
+#content {
+    max-width: 1600px;
     margin: 0 auto;
 }
 
 nav a {
     text-align: center;
+    color: white;
+    text-decoration: none;
+    
 }
 
 #hero-msg h1 {
     text-align: center;
+    color: #4B4A67 
+}
+
+.msg h2 {
+    color: #4B4A67 
+}
+
+h2 {
+    color: #4B4A67 
 }
 
 #hero-msg h4 {
     text-align: center;
+    color: #4B4A67 
 }
 
 .button-box {
@@ -29,6 +93,25 @@ main section {
 
 #background {
     height: 725px;
-    background-color: #999
+    background-color: #8DB580;
+}
+
+.msg {
+    background-color: #8DB580 ;
+}
+
+footer {
+    background-color: #8DB580;
+    color: #4B4A67 
+}
+
+footer a {
+    color: #4B4A67;
+    text-decoration: none;
+}
+
+footer p a:hover {
+    color: #4B4A67;
+    text-decoration: underline;
 }
 
