--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,9 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Pacifico&display=swap" rel="stylesheet');
+
 .logo {
     width: 80px
 }
 
+#logo-link {
+    padding-top: 5px;
+}
+
 .icon {
-    width: 80px
+    width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
@@ -12,14 +19,35 @@
 
 body {
     background-color: white;
+    font-family: 'Fredoka', 'Arial Narrow', Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 .home-title {
-    color: white
+    color: white;
+    font-family: 'Pacifico', 'Helvetica', 'sans-serif';
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #4B4A67
 }
 
 .msg p {
-    color: #4B4A67 
+    color: #4B4A67;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 header {
@@ -32,24 +60,32 @@ nav a:hover {
 }
 
 .book {
-    background-color: #ddd1c78f;
+    background-color: #8DB580;
     color: #4B4A67;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .join {
-    background-color: #ddd1c78f;
+    background-color: #8DB580;
     color: #4B4A67;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover {
-    background-color: #ddd1c78f;
+    background-color: #7E8987;
     color: #4B4A67 
 }
 
 .join:hover {
-    background-color: #ddd1c78f;
+    background-color: #7E8987;
     color: #4B4A67 
 }
 
@@ -62,12 +98,13 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
-    
+    padding: 35px;
 }
 
 #hero-msg h1 {
     text-align: center;
-    color: #4B4A67 
+    color: #4B4A67; 
+    font-family: 'Pacifico', 'Helvetica', 'sans-serif'
 }
 
 .msg h2 {
@@ -75,7 +112,9 @@ nav a {
 }
 
 h2 {
-    color: #4B4A67 
+    color: #4B4A67;
+    font-family: 'Pacifico', 'Helvetica', 'sans-serif';
+    margin: 0;
 }
 
 #hero-msg h4 {
@@ -97,17 +136,21 @@ main section {
 }
 
 .msg {
-    background-color: #8DB580 ;
+    background-color: #8DB580;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
     background-color: #8DB580;
-    color: #4B4A67 
+    color: #4B4A67;
+    padding: 25px 50px;
 }
 
 footer a {
     color: #4B4A67;
     text-decoration: none;
+    margin-top: 200px;
 }
 
 footer p a:hover {
@@ -115,3 +158,6 @@ footer p a:hover {
     text-decoration: underline;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
