--- a/positionstyles.css
+++ b/positionstyles.css
@@ -2,33 +2,42 @@
 /* Activity 1 styles */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
-
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap: 20px;
 }
 .red1 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1/3;
 
 } 
 .green1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
 
 } 
 .yellow1 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: gold; 
 } 
 .blue1 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1/3; 
 } 
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  gap: 10px;
+  position: relative;
 }
 .red2 {
   width: 100px; 
@@ -39,65 +48,96 @@
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-column: 2;
+  grid-row: 1;
+  position: absolute;
+  top: 50px;
+  left: -60px;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
-  background-color: gold; 
+  background-color: gold;
+  grid-column: 1;
+  grid-row: 2; 
+  left: 100px;
+  position: absolute
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 2;
+  grid-row: 2;
+  position: absolute;
+  top: 40px;
+  left: 40px;
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-area: 1/1/2/6;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: green;
+  grid-area: 2/1/4/3;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: gold; 
+  grid-area: 2/4/4/6;
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
   background-color: blue; 
+  grid-area: 4/1/5/6;
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: stretch;
+  gap: 0px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 370px; 
+  height: 450px; 
   background-color: red; 
+  grid-area: 1/1/4/2;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  width: 100%; 
+  height: 150px; 
+  background-color: green;
+  grid-area: 1/2/2/3;
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 150px; 
   background-color: gold; 
+  grid-area: 2/2/3/3;
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 150px; 
   background-color: blue; 
+  grid-area: 3/2/4/3;
 } 
 /* Activity 5 styles */ 
 .content5 {
@@ -105,50 +145,62 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
-
+  float: left;
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 300px; 
   background-color: gold; 
-
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  width: 606px;
+  height: 610;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 200px; 
   background-color: red; 
+  grid-area: 1/1/3/4;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
+  grid-area: 5/1/7/3;
+  z-index: 2;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 400px; 
   background-color: gold; 
+  grid-area: 3/5/7/7;
+  z-index: 2;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 400px; 
+  height: 400px; 
+  background-color: blue;
+  grid-area: 2/2/6/6; 
 } 
 
 
