--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -6,6 +6,8 @@
 
 #logo-link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
@@ -40,8 +42,40 @@ main section img {
     margin: 200px 0;
 }
 
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img, .mountains {
+    border: 10px solid #4B4A67;
+    width: 100%;
+}
+
 .card-img {
-    border: 10px solid #4B4A67
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .msg p {
@@ -52,6 +86,9 @@ main section img {
 
 header {
     background-color: #8DB580;
+    display: grid;
+    grid-template-columns: 150px auto;
+    
 }
 
 nav a:hover {
@@ -99,11 +136,13 @@ nav a {
     color: white;
     text-decoration: none;
     padding: 35px;
+    display: flex;
+    justify-content: space-around;
 }
 
 #hero-msg h1 {
     text-align: center;
-    color: #4B4A67; 
+    color: white; 
     font-family: 'Pacifico', 'Helvetica', 'sans-serif'
 }
 
@@ -119,7 +158,13 @@ h2 {
 
 #hero-msg h4 {
     text-align: center;
-    color: #4B4A67 
+    color: white;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 .button-box {
@@ -133,18 +178,27 @@ main section {
 #background {
     height: 725px;
     background-color: #8DB580;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .msg {
     background-color: #8DB580;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer {
     background-color: #8DB580;
     color: #4B4A67;
     padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -160,4 +214,63 @@ footer p a:hover {
 
 footer .social img {
     padding-top: 15px;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
