--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -88,7 +88,6 @@ header {
     background-color: #8DB580;
     display: grid;
     grid-template-columns: 150px auto;
-    
 }
 
 nav a:hover {
@@ -228,8 +227,38 @@ footer .social img {
     z-index: -1;
 }
 
+.container {
+    display: flex;
+    justify-content: space-between; 
+    gap: 20px; 
+}
 
+.text-column {
+    flex: 1; 
+}
 
+.image-column {
+    display: flex;
+    align-items: center;
+    gap: 20px;  
+}
+
+.stacked-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.large-image {
+    width: 300px; 
+    height: auto;
+}
+
+.stacked-images img {
+    width: 350px; 
+    height: auto;
+}
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
