--- a/fanimehoodies/styles/hoodies.css
+++ b/fanimehoodies/styles/hoodies.css
@@ -76,3 +76,34 @@ main {
     margin-top: 10px; 
 }
 
+/* Footer */
+footer {
+  background-color: #7b0d1e;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer a:hover {
+  padding:1em;
+  min-width: 120px;
+  text-decoration: none;
+  padding: 10px;
+  background-color: #9f2042
+}
+
+/* Social media icons */
+.social a {
+  margin: 0 10px;
+  display: inline-block;
+}
+
+.social img {
+  width: 30px;
+  height: auto;
+}
