--- a/fanimehoodies/styles/fanimecss.css
+++ b/fanimehoodies/styles/fanimecss.css
@@ -20,6 +20,18 @@ body {
     padding: 0;
 }
 
+input[type=text] {
+  width: 130px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+  
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+  width: 100%;
+}
+
 nav {
     background-color: #7b0d1e;
     line-height: 3em;
